--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
       {% elsif site.show_social_icons %}
         <!-- Social Icons -->
         <div class="row ml-1 ml-sm-0">
-          {% include social.html %}
+          <!-- {% include social.html %} -->
         </div>
       {% endif %}
       <!-- Navbar Toogle -->
