--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -4,11 +4,11 @@ layout: default
 
 <div class="post">
 
-  <header class="post-header">
+  <!-- <header class="post-header">
     <h1 class="post-title">
      {% if site.title == blank %}{{ site.title }}{% else %}<span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }}  {{ site.last_name }}{% endif %}
     </h1>
-  </header>
+  </header> -->
 
   <article>
     {% if page.profile %}
@@ -23,6 +23,10 @@ layout: default
       {% endif %}
     </div>
     {% endif %}
+
+    <h1 class="post-title">
+     {% if site.title == blank %}{{ site.title }}{% else %}<span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }}  {{ site.last_name }}{% endif %}
+    </h1>
 
     <div class="clearfix">
       {{ content }}
@@ -39,7 +43,7 @@ layout: default
     {% if page.social %}
     <div class="social">
       {% include social.html %}
-      <div class="contact-note">{{ site.contact_note }}</div>
+      <!-- <div class="contact-note">{{ site.contact_note }}</div> -->
     </div>
     {% endif %}
   </article>
