--- a/_includes/head.html
+++ b/_includes/head.html
@@ -87,3 +87,6 @@ ga('create', '{{ site.google_analytics }}', 'auto');
 ga('send', 'pageview');
 </script>
 {% endif %}
+
+<!-- tab icon -->
+<link rel="shortcut icon" href="assets/img/icon.png" type="image/x-icon" />
