--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -158,7 +158,7 @@ a, table.table a {
 .social {
   text-align: center;
   .contact-icon {
-    font-size: 3rem;
+    font-size: 2.6rem;
     a {
       color: $grey-color-dark;
       &:hover {
@@ -250,6 +250,10 @@ footer.sticky-bottom {
   a:hover {
     border-bottom-color: $theme-color;
     text-decoration: none;
+  }
+  h1 {
+    font-size: 2rem;
+    font-weight: bolder
   }
 }
 
