--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -15,6 +15,12 @@ a, table.table a {
   }
 }
 
+blockquote {
+  color: $grey-color;
+  text-align: center;
+  font-size: 1.2rem;
+}
+
 // Math
 
 .equation {
