soften background white

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -42,6 +42,8 @@ $stylish-light-blue:  #7395AE !default;
 $stylish-dark-blue:   #557A95 !default;
 $stylish-beige:       #B1A296 !default;
 
+$cardboard-white:     #f7f7f7 !default;
+
 /* Set theme colors *************************/
 $theme-color:         $stylish-light-blue;
 
