--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -84,6 +84,7 @@ blockquote {
   box-shadow: none;
   border-bottom: 1px solid $grey-color-light;
   opacity: 0.95;
+  background-color: $cardboard-white;
 }
 .navbar.navbar-light {
   // Remove link decoration
