--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -18,7 +18,9 @@ a, table.table a {
 blockquote {
   color: $grey-color;
   text-align: center;
-  font-size: 1.2rem;
+  font-size: 1rem;
+  margin-left: 4rem;
+  margin-right: 4rem;
 }
 
 // Math
