--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -210,12 +210,15 @@ footer.sticky-bottom {
 
 .header-bar {
   border-bottom: 1px solid $grey-color-light;
-  text-align: center;
-  padding-top: 2rem;
-  padding-bottom: 5rem;
+  text-align: left;
+  padding-bottom: 1rem;
   h1 {
-    color: $theme-color;
-    font-size: 5rem;
+    font-size: 2.4rem;
+    padding-bottom: 0.4rem;
+  }
+  h2 {
+    font-size: 1.1rem;
+    color: $grey-color;
   }
 }
 
