--- a/_includes/social.html
+++ b/_includes/social.html
@@ -12,5 +12,5 @@
   {% if site.quora_username %}<a href="https://www.quora.com/profile/{{ site.quora_username }}" target="_blank" title="Quora"><i class="fab fa-quora"></i></a>{% endif %}
   {% if site.blogger_url %}<a href="{{ site.blogger_url }}" target="_blank" title="Blogger"><i class="fab fa-blogger-b"></i></a>{% endif %}
   {% if site.strava_userid %}<a href="https://www.strava.com/athletes/{{ site.strava_userid }}" target="_blank" title="Strava"><i class="fab fa-strava"></i></a>{% endif %}
-  {% if site.rss %}<a href="{{ site.url }}/feed.xml" target="_blank" title="RSS"><i class="fas fa-rss"></i></a>{% endif %}
+  {% if site.rss %}<a href="feed.xml" target="_blank" title="RSS"><i class="fas fa-rss"></i></a>{% endif %}
 </span>
